# okxq-rs

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/python/: code_runner.py  regime_filter.py  strategy_runner.py  strategy_runner_compute.py  strategy_runner_context.py  strategy_runner_context_cache.py  strategy_runner_decision.py  strategy_runner_diagnostics.py  strategy_runner_metadata.py  strategy_runner_progress.py  strategy_runner_values.py
src-tauri/src/: alerts.rs  app_state.rs  backtest_progress.rs  backtest_result_persistence.rs  correlation.rs  dataset_builder.rs  error.rs  factor_engine.rs  feature_bar_rows.rs  guardian.rs  indicators.rs  instrument.rs  lib.rs  live_strategy.rs  live_trade_smoke.rs  main.rs  market_candle_rows.rs  model_trainer.rs  monte_carlo.rs  ohlcv.rs  okx.rs  okx_network.rs  okx_outbound.rs  orderbook_snapshot.rs  realtime.rs  risk_controls.rs  strategy_engine.rs  strategy_execution_contract.rs  strategy_execution_semantics.rs  strategy_executor.rs  sync_jobs.rs  sync_record_summary.rs  tick_collector.rs  timeframes.rs  token_bucket.rs  trading_fills.rs  trading_semantics.rs
src-tauri/src/alerts/: api.rs  evaluation.rs  input.rs  storage.rs  types.rs
src-tauri/src/commands/: config.rs  local_api.rs  mod.rs  preferences.rs  system.rs
src-tauri/src/config/: env_file.rs  manager.rs  mod.rs  preferences.rs  (+2 more)
(+1041 files in other folders)
