[package]
name = "okxq-rs"
version = "0.1.0"
description = "OKX Quantitative desktop app rebuilt with Rust and Tauri"
authors = ["okxQ-rs"]
edition = "2021"
rust-version = "1.80"
default-run = "okxq-rs"

[lib]
name = "okxq_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
zip = "2"

[features]
default = []
